<?xml version="1.0"?>
<package format="3">
  <name>sim_core</name>
  <version>0.0.1</version>
  <description>Minimal simulator core for driverless FSAE (ROS2 Jazzy).</description>
  <maintainer email="bryanx@cs.washington.edu">User Name<bryanx>
  <license>MIT</license>

  <!-- Build tool dependencies -->
  <buildtool_depend>ament_python</buildtool_depend>

  <!-- Dependencies for ROS2 Python nodes and messages -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
