<?xml version="1.0"?>
<package format="3">
  <name>sim_viz</name>
  <version>0.0.1</version>
  <description>Visualization helpers: global cone markers and map→base_link TF.</description>

  <maintainer email="bryanx@cs.washington.edu">Bryan Xu</maintainer>
  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>python3-yaml</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
